# IMAC2_coniques

./: .gitignore  CMakeLists.txt  Readme.md
data/: geogebra_conics_template.html
doc/: CMakeLists.txt  Doxyfile-html.cmake  journalDeBord.md  reponses.md
header/: Conic.hpp  Point.hpp
include/: Beam.hpp  Color.hpp  Conic.hpp  Directory.hpp  Entry.hpp  Geogebra_conics.hpp  Geogebra_object.hpp  Parsing.hpp  Point.hpp  Viewer.hpp
input/: file_0.txt
src/: Beam.cpp  Color.cpp  Conic.cpp  Directory.cpp  Directory.hpp  Entry.cpp  Entry.hpp  Geogebra_conics.cpp  Geogebra_conics.hpp  Geogebra_object.cpp  Parsing.cpp  Point.cpp  Viewer.cpp  main.cpp
